# android-streammedia-player

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/fawvw/hmi/ffmpegplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: easy_player.cpp  event_callback.cpp  event_callback.h  native-lib.cpp  native_window_renderer.cpp  opensles.cpp
app/src/main/cpp/fftools/: cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_demux.c  ffmpeg_filter.c  ffmpeg_mux_init.c  native-lib.cpp
app/src/main/cpp/include/: config.h
app/src/main/java/com/fawvw/hmi/ffmpegplayer/: MainActivity.kt  PlaySurfaceView.kt
app/src/main/java/com/fawvw/hmi/ffmpegplayer/player/: FFMpegPlayer.kt  IJKPlayer.kt  IPlayer.kt
app/src/main/jniLibs/arm64-v8a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/fawvw/hmi/ffmpegplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
